<project xmlns="http://maven.apache.org/POM/4.0.0">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.example</groupId>
  <artifactId>maven-java-preview-property</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <preview.flag>--enable-preview</preview.flag>
    <maven.compiler.compilerArgs>${preview.flag}</maven.compiler.compilerArgs>
  </properties>
</project>
